--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
 - track snapshot dependencies through package .conf files
 - clean up dist/ too
 - handle ghc super version
+- count (dirs/installs)
+- types for dirs (Install, Snapshots, Programs)
