--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
+- purge-older --recursive
+
 - track snapshot dependencies through package .conf files
 - clean up dist/ too
 - handle ghc super version
