introduce Recursion for either --subdirs or --recursive
- use lowercase short options for Recursion
- uppercase short options for Mode
- withRecursion
- rename setStackWorkDir to setStackWorkInstallDir
- factor out findStackWorks

--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
-- purge-older --recursive
+- remove snapshots for uninstalled ghc versions
+- follow snapshots by installed ghc versions
 
 - track snapshot dependencies through package .conf files
 - clean up dist/ too
